# multi-tenant-crm-fastapi-ca

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.test  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml  task.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py
src/: main.py
src/api/: dependencies.py
src/api/middleware/: error_handler.py
src/api/v1/endpoints/: activities.py  analytics.py  auth.py  contacts.py  deals.py  organizations.py  tasks.py
src/api/v1/schemas/: activity.py  analytics.py  auth.py  common.py  contact.py  deal.py  task.py
src/core/: config.py  security.py
src/db/: base.py  models.py  session.py
src/domain/: exceptions.py
src/domain/entities/: activity.py  contact.py  deal.py  organization.py  organization_member.py  task.py  user.py
src/domain/value_objects/: activity_type.py  deal_stage.py  deal_status.py  role.py
src/repositories/: activity.py  base.py  contact.py  deal.py  organization.py  organization_member.py  task.py  user.py
src/services/: __init__.py  activity.py  analytics.py  auth.py  contact.py  deal.py  permission.py  task.py
tests/: test_config.py  test_database.py  test_domain.py
tests/integration/: conftest.py  test_activities_integration.py  test_analytics_integration.py  test_auth_integration.py  test_contacts_integration.py  test_deals_integration.py  test_tasks_integration.py
tests/properties/: conftest.py  test_api.py  test_organizations.py  test_permissions.py  test_security.py  test_services.py
